--- a/configlite/build.gradle
+++ b/configlite/build.gradle
@@ -1,14 +1,12 @@
-plugins {
-    id 'com.android.library'
-}
+apply plugin: 'com.android.library'
 
 android {
     namespace 'com.configlite'
-    compileSdk 30
+    compileSdkVersion 30
 
     defaultConfig {
-        minSdk 19
-        targetSdk 30
+        minSdkVersion 16
+        targetSdkVersion 30
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
