Update gradle version 8.6

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 
 android {
     namespace 'com.sample.apiconfiglite'
-    compileSdkVersion 30
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.sample.apiconfiglite"
-        minSdkVersion 19
-        targetSdkVersion 30
+        minSdk 25
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -21,14 +23,18 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    buildFeatures {
+        buildConfig true
     }
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation project(path: ':configlite')
 }
