--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        google()
-        jcenter()
-        maven { url 'https://jitpack.io' }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-    }
+
+plugins {
+    id 'com.android.application' version '8.4.1' apply false
+    id 'com.android.library' version '8.4.1' apply false
 }
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
-    }
 
-    ext {
-        annotation = '1.0.0'
+ext {
+    annotation = '1.8.0'
 
-        retrofit_version = '2.9.0'
-        retrofit_okhttp_version = '4.9.3'
-    }
+    retrofit_version = '2.11.0'
+    retrofit_okhttp_version = '4.12.0'
 }
 
 task clean(type: Delete) {
