--- a/configlite/build.gradle
+++ b/configlite/build.gradle
@@ -1,12 +1,15 @@
-apply plugin: 'com.android.library'
+plugins {
+    id 'com.android.library'
+    id 'maven-publish'
+}
 
 android {
     namespace 'com.configlite'
-    compileSdkVersion 30
+    compileSdk 34
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 30
+        minSdk 25
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -19,8 +22,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
     }
 }
 
@@ -28,4 +37,19 @@ dependencies {
     implementation "androidx.annotation:annotation:$rootProject.ext.annotation"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.retrofit_okhttp_version"
+}
+
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.appsfeature'
+            artifactId = 'configlite'
+            version = '1.2-alpha01'
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
