--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ ext {
 
     retrofit_version = '2.11.0'
     retrofit_okhttp_version = '4.12.0'
+
+    core_version = '1.2'
 }
 
 task clean(type: Delete) {
