--- a/configlite/build.gradle
+++ b/configlite/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation "androidx.annotation:annotation:$rootProject.ext.annotation"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.retrofit_okhttp_version"
+
+    implementation "org.bitbucket.appsfeature:core:$rootProject.ext.core_version"
 }
 
 
@@ -45,7 +47,7 @@ publishing {
         release(MavenPublication) {
             groupId = 'com.github.appsfeature'
             artifactId = 'configlite'
-            version = '1.2-alpha01'
+            version = '1.2-alpha02'
 
             afterEvaluate {
                 from components.release
