--- a/configlite/build.gradle
+++ b/configlite/build.gradle
@@ -34,7 +34,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.annotation:annotation:$rootProject.ext.annotation"
+    implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompat"
+//    implementation "androidx.annotation:annotation:$rootProject.ext.annotation"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.ext.retrofit_okhttp_version"
 
